tentando eliminar todas as dependências

--- a/v1/lista.html
+++ b/v1/lista.html
@@ -28,7 +28,7 @@
     <div class="pncintro specific">
 
 
-    <script src="https://www.ranoya.com/Assets/JSLibs/AMS/maketable.js"></script>
+    <script src="maketable.js"></script>
     <h1 class="pnclistatitulo">Point & Click<br>Adventures</h1>
 
     <div class="whitespace"></div>
