aviso de que não filtra

--- a/v1/paralax.html
+++ b/v1/paralax.html
@@ -187,6 +187,8 @@
             </div>
         </p>
 
+        <p>OBS: esta versão é mantida apenas para registro histórico. Ela não aplica os filtros selecionados.</p>
+
         <a class="pncsimplelink" target="_blank" href="https://narrativas.ranoya.com/pointnclick/lista.php">Dados</a> &nbsp; <a target="_blank" class="pncsimplelink" href="https://narrativas.ranoya.com/pointnclick/dados.json">Dados (JSON)</a>
 
 
