corrigindo a porcaria que o dos-zone fez.

--- a/montior.html
+++ b/montior.html
@@ -64,7 +64,7 @@
         allowfullscreen
         frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"
-        src="https://dos.zone/player/?bundleUrl=https%3A%2F%2Fcdn.dos.zone%2Fcustom%2Fdos%2Fspace-quest-chapter-i-the-sarien-encounter.jsdos?anonymous=1"
+        src="https://namco.vercel.app/interfaces/?rom=sq1"
       ></iframe>
 
       <!--
