sem emulador na entrada

--- a/montior.html
+++ b/montior.html
@@ -64,7 +64,7 @@
         allowfullscreen
         frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"
-        src="https://namco.vercel.app/interfaces/?rom=sq1"
+        src="https://www.youtube.com/embed/r0TLhR51uGY"
       ></iframe>
 
       <!--
