links sem hover

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
         --inside-bottom: calc(var(--altura-screen, 55vh) + 30px - 80px);
       }
 
+      .nulllink {
+        background-color: transparent !important;
+      }
+
       .treeitem:hover path {
         fill: var(--fg-color) !important;
       }
