retornando à emulação como elemento inicial do monitor

--- a/montior.html
+++ b/montior.html
@@ -64,10 +64,23 @@
         allowfullscreen
         frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"
-        src="https://www.youtube.com/embed/r0TLhR51uGY"
+        src="https://namco.vercel.app/interfaces/?rom=ssq2"
       ></iframe>
 
       <!--
+      <iframe
+        allowfullscreen="allowfullscreen"
+        mozallowfullscreen="mozallowfullscreen"
+        msallowfullscreen="msallowfullscreen"
+        oallowfullscreen="oallowfullscreen"
+        webkitallowfullscreen="webkitallowfullscreen"
+        allowfullscreen
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"
+        src="https://www.youtube.com/embed/r0TLhR51uGY"
+      ></iframe>
+
+      
 
         COLOSSAL CAVE ORIGINAL: https://dos.zone/player/?bundleUrl=https://cdn.dos.zone/custom/dos/classic-adventure-the-original-colossal-cave.jsdos?anonymous=1
       <iframe
