--- a/v1/paralax.html
+++ b/v1/paralax.html
@@ -189,7 +189,7 @@
 
         <p>OBS: esta versão é mantida apenas para registro histórico. Ela não aplica os filtros selecionados.</p>
 
-        <a class="pncsimplelink" target="_blank" href="https://narrativas.ranoya.com/pointnclick/lista.php">Dados</a> &nbsp; <a target="_blank" class="pncsimplelink" href="https://pointandclick.vercel.app/v1/dados.json">Dados (JSON)</a>
+        <a class="pncsimplelink" target="_blank" href="https://pointandclick.vercel.app/v1/lista.html">Dados</a> &nbsp; <a target="_blank" class="pncsimplelink" href="https://pointandclick.vercel.app/v1/dados.json">Dados (JSON)</a>
 
 
     </div>
