--- a/v1/timelineonly.html
+++ b/v1/timelineonly.html
@@ -136,17 +136,19 @@
       }
 
       ::-webkit-scrollbar {
-        width: 12px;
-        height: 12px;
+        width: 20px;
+        height: 20px;
         background-color: var(--md-bg);
         color: var(--md-bg);
       }
 
       ::-webkit-scrollbar-thumb:horizontal {
+        height: 8px;
         border-right: 8px solid var(--md-fg);
       }
 
-      ::-webkit-scrollbar-thumb:horizontal {
+      ::-webkit-scrollbar-thumb:vertical {
+        width: 8px;
         border-bottom: 8px solid var(--md-fg);
       }
 
