--- a/v1/timelineonly.html
+++ b/v1/timelineonly.html
@@ -142,14 +142,21 @@
         color: var(--md-bg);
       }
 
+      ::-webkit-scrollbar-track {
+        width: 20px;
+        height: 20px;
+        background-color: var(--md-bg);
+        color: var(--md-bg);
+      }
+
       ::-webkit-scrollbar-thumb:horizontal {
         height: 8px;
-        border-bottom: 8px solid var(--md-fg);
+        color: var(--md-fg);
       }
 
       ::-webkit-scrollbar-thumb:vertical {
         width: 8px;
-        border-right: 8px solid var(--md-fg);
+        color: var(--md-fg);
       }
 
       ::placeholder {
