mais um teste de cor no scroll

--- a/v1/timelineonly.html
+++ b/v1/timelineonly.html
@@ -151,12 +151,12 @@
 
       ::-webkit-scrollbar-thumb:horizontal {
         height: 8px;
-        color: var(--md-fg);
+        background-color: red;
       }
 
       ::-webkit-scrollbar-thumb:vertical {
         width: 8px;
-        color: var(--md-fg);
+        background-color: blue;
       }
 
       ::placeholder {
