--- a/v1/timelineonly.html
+++ b/v1/timelineonly.html
@@ -142,21 +142,19 @@
         color: var(--md-bg);
       }
 
-      ::-webkit-scrollbar-track {
-        width: 20px;
-        height: 20px;
-        background-color: var(--md-bg);
-        color: var(--md-bg);
-      }
-
       ::-webkit-scrollbar-thumb:horizontal {
         height: 8px;
-        background-color: red;
+        border-bottom: 8px solid var(--md-fg);
       }
 
       ::-webkit-scrollbar-thumb:vertical {
         width: 8px;
-        background-color: blue;
+        border-right: 8px solid var(--md-fg);
+      }
+
+      ::-webkit-scrollbar-corner {
+        background-color: var(--md-bg);
+        color: var (--md-bg);
       }
 
       ::placeholder {
