--- a/v1/timelineonly.html
+++ b/v1/timelineonly.html
@@ -324,11 +324,13 @@
         width: 100px !important;
         background-color: var(--md-bg, white);
         color: var(--md-fg, black) !important;
+        font-family: Helvetica, Arial, Helvetica, sans-serif;
       }
 
       div.oi-ec050e-input input {
         color: var(--md-fg, white) !important;
         border-bottom-color: var(--md-fg, white) !important;
+        font-family: Helvetica, Arial, Helvetica, sans-serif;
       }
 
       input {
@@ -345,6 +347,7 @@
 
       #observablehq-viewof-filtros-0ac78f84 form div.oi-ec050e-input {
         width: calc(50vw - 95px) !important;
+        font-family: Helvetica, Arial, Helvetica, sans-serif;
       }
 
       input:focus {
@@ -1262,7 +1265,7 @@ startfixingthings();
       ) {
         setTimeout(function () {
           atualizainput(decodeURI($_GET["shadow"]), 1);
-        }, 1500);
+        }, 2500);
       }
 
       if (
@@ -1272,7 +1275,7 @@ startfixingthings();
       ) {
         setTimeout(function () {
           atualizainput(decodeURI($_GET["filtra"]), 0);
-        }, 1500);
+        }, 2500);
       }
     </script>
   </body>
