mudança de fonte

--- a/v1/timelineonly.html
+++ b/v1/timelineonly.html
@@ -269,6 +269,7 @@
         height: 80px;
         height: 80px;
         width: 100vw;
+        font-family: Helvetica, Arial, sans-serif;
       }
 
       .vizinpgrudatopo {
