--- a/v1/timelineonly.html
+++ b/v1/timelineonly.html
@@ -1269,10 +1269,17 @@ startfixingthings();
       ) {
         let insiste = setInterval(function () {
           if (
-            document.getElementsByTagName("input")[1].innerHTML.match(/input/i)
+            typeof document.getElementsByTagName("input")[0] != "undefined" &&
+            document.getElementsByTagName("input")[0] != null
           ) {
-            clearInterval(insiste);
-            atualizainput(decodeURI($_GET["shadow"]), 1);
+            if (
+              document
+                .getElementsByTagName("input")[1]
+                .innerHTML.match(/input/i)
+            ) {
+              clearInterval(insiste);
+              atualizainput(decodeURI($_GET["shadow"]), 1);
+            }
           }
         }, 10);
       }
@@ -1284,10 +1291,17 @@ startfixingthings();
       ) {
         let insiste2 = setInterval(function () {
           if (
-            document.getElementsByTagName("input")[0].innerHTML.match(/input/i)
+            typeof document.getElementsByTagName("input")[0] != "undefined" &&
+            document.getElementsByTagName("input")[0] != null
           ) {
-            clearInterval(insiste2);
-            atualizainput(decodeURI($_GET["filtra"]), 0);
+            if (
+              document
+                .getElementsByTagName("input")[0]
+                .innerHTML.match(/input/i)
+            ) {
+              clearInterval(insiste2);
+              atualizainput(decodeURI($_GET["filtra"]), 0);
+            }
           }
         }, 10);
       }
