--- a/v1/timelineonly.html
+++ b/v1/timelineonly.html
@@ -66,6 +66,7 @@
         );
         resetalabel();
         window.location = "#listaartefatos";
+        resetalabel();
       };
 
       function labeia(event, nome, subtitulo, produtora, imagem) {
@@ -818,7 +819,7 @@
       }
 
       .matriztimeline_textocomponente {
-        font-size: 13px;
+        font-size: 9px;
         line-height: 15px;
         align-self: center;
       }
