mais uma melhoria nos textos identificados

--- a/v1/timelineonly.html
+++ b/v1/timelineonly.html
@@ -571,9 +571,11 @@
 
       .titulosingle {
         font-weight: bolder;
-        color: white;
-        font-size: 18px;
-        line-height: 18px;
+        color: var(--md-mark);
+        font-size: 22px;
+        line-height: 26px;
+        margin-top: 130px;
+        font-family: Helvetica, Arial, sans-serif;
       }
 
       .subtitulosingle,
@@ -979,6 +981,11 @@
           text-align: justify;
           font-size: 16px;
           line-height: 16px;
+          color: var(--md-fg);
+          font-family: Helvetica, Arial, sans-serif;
+          margin-top: 20px;
+          font-size: 16px;
+          line-height: 20px;
         }
 
         form.oi-ec050e > label {
