mudança no lugar errado

--- a/v1/timelineonly.html
+++ b/v1/timelineonly.html
@@ -581,8 +581,11 @@
       .subtitulosingle,
       .produtorasingle,
       .generosingle {
+        color: var(--md-fg);
+        font-family: Helvetica, Arial, sans-serif;
+        margin-top: 20px;
         font-size: 16px;
-        line-height: 16px;
+        line-height: 20px;
       }
 
       .blocosEGA {
@@ -979,8 +982,7 @@
         .produtorasingle,
         .generosingle {
           text-align: justify;
-          font-size: 16px;
-          line-height: 16px;
+
           color: var(--md-fg);
           font-family: Helvetica, Arial, sans-serif;
           margin-top: 20px;
